<resources>
    <string name="app_name">Gaitimu</string>
    <string name="marcha_str">Marcha</string>
    <string name="marcha_libre_str">Marcha_libre</string>
    <string name="marcha_tandem_str">Marcha_en_tandem</string>
    <string name="pos_str">Posición</string>
    <string name="pos_libre_str">Posicion_Libre</string>
    <string name="pos_tandem_iz_str">Posicion_en_Tandem_Izquierda</string>
    <string name="pos_tandem_der_str">Posicion_en_Tandem_Derecha</string>
    <string name="senta_str">Sentado</string>
    <string name="per_dedos_str">Persecusión de dedos</string>
    <string name="per_dedos_iz_str">Persecusion_de_dedos_Izquierda</string>
    <string name="per_dedos_der_str">Persecusion_de_dedos_Derecha</string>
    <string name="dedo_nariz_str">Dedo-Nariz</string>
    <string name="dedo_nariz_iz_str">Dedo-Nariz_Izquierda</string>
    <string name="dedo_nariz_der_str">Dedo-Nariz_Derecha</string>
    <string name="mov_alter_str">Movimientos alternados rápidos de mano</string>
    <string name="mov_alter_iz_str">Movimientos_alternados_Izquierda</string>
    <string name="mov_alter_der_str">Movimientos_alternados_Derecha</string>
    <string name="tobillo_str">Recorrido de tobillo</string>
    <string name="tobillo_str_iz_str">Recorrido_de_tobillo_Izquierda</string>
    <string name="tobillo_str_der_str">Recorrido_de_tobillo_Derecha</string>
    <string name="config_str">Configuración</string>
    <string name="patient_name">Nombre</string>
    <string name="patient_name_hint">Nombre del paciente</string>
    <string name="patient_age">Edad</string>
    <string name="patient_age_hint">Edad del paciente</string>
    <string name="patient_gender">Género</string>
    <string name="patient_male">Hombre</string>
    <string name="patient_female">Mujer</string>
    <string name="patient_location">En donde vive</string>
    <string name="patient_location_hint">Donde vive el paciente</string>
    <string name="patient_observations">Observaciones</string>
    <string name="patient_observations_hint">Observaciones</string>
    <string name="add_patient">Agregar paciente</string>
    <string name="lblIP">IP of WebSocket Server</string>
    <string name="lblPort">Port of Websocket Server</string>
    <string name="lblSensors">Number of sensors</string>
    <string name="btn_save_settings">Save settings</string>
    <string name="btn_connect">Connect to server</string>
    <string name="wsIP">ws_server_ip</string>
    <string name="wsPort">ws_server_port</string>
    <string name="nSensors">n_sensors</string>
    <string name="emp_registro_str">Empezar registro</string>
    <string name="term_registro_str">Terminar registro</string>
    <string name="accX_str">acc X</string>
    <string name="accY_str">acc Y</string>
    <string name="accZ_str">acc Z</string>
    <string name="gyroX_str">gyro X</string>
    <string name="gyroY_str">gyro Y</string>
    <string name="gyroZ_str">gyro Z</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
