<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPatientActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary">
            </android.support.v7.widget.Toolbar>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/material_drawer_item_padding"
                android:text="@string/patient_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:hint="@string/patient_name_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_view_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_age"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_marginBottom="16dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_age_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/patient_age_hint"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_view_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_gender"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:paddingTop="@dimen/material_drawer_item_padding"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/input_gender_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_male"
                    android:onClick="onRadioGenderClicked"/>
                <RadioButton android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_female"
                    android:onClick="onRadioGenderClicked"/>
            </RadioGroup>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_view_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:paddingTop="@dimen/material_drawer_item_padding"
                android:layout_marginBottom="16dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/patient_location_hint"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_view_observations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_observations"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:paddingTop="@dimen/material_drawer_item_padding"
                android:layout_marginBottom="16dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_observations_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_observations"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/patient_observations_hint"
                    android:lines="2"
                    android:maxLines="4"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_add_patient"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/add_patient" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>