<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="4sp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:background="@color/md_red_A700"
                    android:baselineAligned="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accX_str" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:background="@color/md_light_green_A700"
                    android:baselineAligned="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accY_str" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:background="@color/md_blue_A700"
                    android:baselineAligned="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accZ_str" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:background="@color/md_yellow_A700"
                    android:baselineAligned="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gyroX_str" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:background="@color/md_black_1000"
                    android:baselineAligned="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gyroY_str" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:background="#ff00ff"
                    android:baselineAligned="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gyroZ_str" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>